--- a/package-climate-smartir.yaml
+++ b/package-climate-smartir.yaml
@@ -7,6 +7,6 @@ climate:
     name: AC
     unique_id: ac
     device_code: 1401
-    controller_data: 192.168.31.51
+    controller_data: 0bf3d07daa0a259df5539420b853153f
     temperature_sensor: sensor.netatmo_smartnest_komnata_temperature
     humidity_sensor: sensor.netatmo_smartnest_komnata_humidity
